--- a/style/main.scss
+++ b/style/main.scss
@@ -54,3 +54,16 @@ a {
 .bg_main_color_text {
   color: $main_color;
 }
+.mySwiper {
+  .swiper-button-next,
+  .swiper-button-prev {
+    background: #fff;
+    transition: all 0.2s ease-in-out;
+  }
+  .swiper-button-next {
+    transform: scale(0.8) translateX(15px);
+  }
+  .swiper-button-prev {
+    transform: scale(0.8) translateX(-15px);
+  }
+}
