--- a/style/main.css
+++ b/style/main.css
@@ -61,6 +61,10 @@
 .card_container {
   border: 0.1em solid #eee;
   overflow: hidden;
+  -webkit-box-shadow: 0px 5px 9px rgba(153, 153, 153, 0.334);
+          box-shadow: 0px 5px 9px rgba(153, 153, 153, 0.334);
+  cursor: -webkit-grab;
+  cursor: grab;
 }
 
 .card_container .mySwiper2:hover .swiper-button-next,
